# filecrypt

./: Cargo.toml
src/: crypto.rs  header.rs  main.rs  utils.rs
